[email-rotation] automatically add rotation(s)
This updates rotations with the result of running
`./email-rotation/extend_rotation.py --ensure-weeks=16`.

--- a/email-rotation/rotation.yaml
+++ b/email-rotation/rotation.yaml
@@ -34,3 +34,11 @@ rotations:
   - serge-sans-paille
   - offsake
   start_time: '2025-11-23T00:00:00+00:00'
+- members:
+  - GreatKeeper
+  - tpenge
+  start_time: '2025-12-07T00:00:00+00:00'
+- members:
+  - tuliom
+  - wphuhn-intel
+  start_time: '2025-12-21T00:00:00+00:00'
