--- a/email-rotation/rotation.yaml
+++ b/email-rotation/rotation.yaml
@@ -50,3 +50,11 @@ rotations:
   - mrragava
   - DimitryAndric
   start_time: '2026-01-18T00:00:00+00:00'
+- members:
+  - emaste
+  - gburgessiv
+  start_time: '2026-02-01T00:00:00+00:00'
+- members:
+  - cuviper
+  - kbeyls
+  start_time: '2026-02-15T00:00:00+00:00'
